complete application and infra

--- a/docker_images/dashboard/index.html
+++ b/docker_images/dashboard/index.html
@@ -54,7 +54,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", async function fetchData() {
             try {
-                const response = await fetch('https://3ln5sotn89.execute-api.us-east-1.amazonaws.com/prd/submit');
+                const response = await fetch('https://eqbausz8w6.execute-api.us-west-1.amazonaws.com/prod/data');
 
                 if (!response.ok) {
                     throw new Error(`HTTP error! Status: ${response.status}`);
