--- a/docker_images/frontend /index.html
+++ b/docker_images/frontend /index.html
@@ -113,7 +113,7 @@
       };
 
       try {
-        const response = await fetch('https://3ln5sotn89.execute-api.us-east-1.amazonaws.com/prd/submit', {
+        const response = await fetch('https://eqbausz8w6.execute-api.us-west-1.amazonaws.com/prod/data', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
